<resources>
    <string name="app_name">ELearn</string>
    <string name="txt_waiting">Waiting...</string>
    <string name="txt_warning_plz_input_username">Please input username</string>
    <string name="txt_warning_plz_input_password">Please input password</string>
    <string name="txt_warning_plz_input_new_password">Please enter a new password</string>
    <string name="txt_warning_plz_input_old_password">Please enter a old password</string>
    <string name="txt_warning_plz_input_confirm_password">Please enter a confirm password</string>
    <string name="err_network_available">Vui lòng kiểm tra kết nối mạng</string>
    <string name="err_unexpected_exception">Please try again!</string>
    <string name="txt_ok">OK</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_home">Community</string>
    <string name="txt_write_post">Write Post</string>
    <string name="txt_edit_post">Edit Post</string>
    <string name="txt_et_question">Question:</string>
    <string name="txt_course_name">Course name</string>
    <string name="txt_attach_image">Attach image</string>
    <string name="txt_send_ques">Send question</string>
    <string name="txt_learn_voca">Learn Vocabulary</string>
    <string name="txt_select_all">Select all</string>
    <string name="txt_voca">Vocabulary</string>
    <string name="txt_grammar1">Grammar</string>
    <string name="txt_practice">Practice</string>
    <string name="txt_descrip_voca">Learn vocabulary with image, syntax, noun,... </string>
    <string name="txt_descrip_grammar">Including lesson objectives, structure, usage, for example, ... </string>
    <string name="txt_descrip_practice">You can improve with many topic </string>
    <string name="txt_do_practice">Do practice</string>
    <string name="txt_explain_ans">Explain answer:</string>
    <string name="txt_u_are_learning">You are learning</string>
    <string name="txt_choose_option">Choose option you want learn</string>
    <string name="txt_topic_demo">Simple past tense</string>
    <string name="txt_num_word_demo">73 words</string>
    <string name="txt_image">Image</string>
    <string name="txt_word">Word</string>
    <string name="txt_hint_search">Search</string>
    <string name="txt_more">More...</string>
    <string name="txt_done_2">Done</string>
    <string name="txt_meaning">Meaning</string>
    <string name="txt_study">Study</string>
    <string name="txt_quiz">Quiz</string>
    <string name="txt_add_alarm">Add alarm</string>
    <string name="txt_learn_grammar">Learn grammar</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="txt_goodluck">Good luck</string>
    <string name="txt_day_ago">2 day ago</string>
    <string name="txt_name_demo">Trần Hồng Quân</string>
    <string name="txt_question_demo">Why do lions eat raw meat?</string>
    <string name="txt_bookmark">Bookmarks</string>
    <string name="txt_comment">Comment</string>
    <string name="txt_time_create">17:45</string>
    <string name="txt_like">Like</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_email">Email</string>
    <string name="txt_input_phonenumber">Enter phone number</string>
    <string name="txt_input_address">Enter address</string>
    <string name="txt_enter_pass">Enter password</string>
    <string name="txt_re_enter_pass">Re Enter password</string>
    <string name="txt_input_email">Enter email</string>
    <string name="txt_address">Address</string>
    <string name="txt_fullname">Full name</string>
    <string name="txt_birthday">Birthday</string>
    <string name="txt_gender">Gender</string>
    <string name="logout_failed">Logout failed!</string>
    <string name="logout_success">Logout success!</string>
    <string name="txt_agree">Agree</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_new_password">New password</string>
    <string name="txt_change_password">Change password</string>
    <string name="txt_warning_plz_input_password_old">Please input old password</string>
    <string name="txt_enter_new_password_confirm">Please input new password and confirm.</string>
    <string name="txt_new_password_old_incorrect">Old password is incorrect</string>
    <string name="txt_pass_least_6">Password length must be greater than or equal to 6 characters</string>
    <string name="txt_pass_invalid_2">The new password cannot be the same as the old password</string>
    <string name="txt_confirm_password_incorrect">The confirmation password does not match the new password</string>
    <string name="txt_new_password_old">Old password</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_done">Done</string>
    <string name="txt_phone_number">Phone number</string>
    <string name="txt_change_password_1">Change password</string>
    <string name="txt_change_profile">Change profile</string>
    <string name="txt_contact">Contacts</string>
    <string name="txt_setting">Settings</string>
    <string name="txt_grammar">Menu Learn</string>
    <string name="txt_toeic_test">Toeic test</string>
    <string name="txt_dic">Dictionary</string>
    <string name="end_alert">Time still, do you want to end it?</string>
    <string name="txt_enter_comment">Enter comment here</string>
    <string name="txt_copy_right">Copyright © 2019 15T1 Team</string>
    <string name="txt_compare_birthday">The date of birth cannot be greater than the current date</string>
    <string name="txt_no_text">Không có</string>
    <string name="txt_username">Username</string>
    <string name="txt_login">Login</string>
    <string name="txt_login_google">Connect via Google</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_sign_up"><u>Sign up</u></string>
    <string name="txt_cannot_access_this_image">Không thể truy cập ảnh này!</string>
    <string name="login_gg_failed">Login with Google failed</string>
    <string name="txt_password">Password</string>
    <string name="txt_logout">Log out</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_edit_profile">Edit profile</string>
    <string name="txt_enter_fullname">Enter fullname</string>
    <string name="txt_are_you_sure_logout">Are you sure logout?</string>
    <string name="txt_warning_login_fail">Thông tin đăng nhập của bạn không chính xác. Vui lòng thử lại</string>
    <string-array name="arr_capture">
        <item>Chụp ảnh</item>
        <item>Chọn từ Gallery</item>
    </string-array>
</resources>
