<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/navigation_header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_avatar_94"
        android:background="@drawable/img_top_learn_voca">

        <TextView
            android:id="@+id/tv_num_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_corner_10"
            android:layout_marginTop="@dimen/card_corner_10"
            android:gravity="bottom"
            android:text="@string/txt_num_word_demo"
            android:textColor="#000"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center_horizontal"
            android:padding="@dimen/card_corner_10"
            android:text="@string/txt_study"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center_horizontal"
            android:padding="@dimen/card_corner_10"
            android:text="@string/txt_quiz"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_add_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center_horizontal"
            android:padding="@dimen/card_corner_10"
            android:text="@string/txt_add_alarm"
            android:textColor="#fff" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/layout_top_voca"
        android:background="#60c4db"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/txt_word"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tvMeaning"
            app:layout_constraintStart_toEndOf="@id/tvWords"
            app:layout_constraintEnd_toStartOf="@id/tvBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/txt_meaning"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tvBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="5dp"
            android:text="@string/txt_bookmark"
            android:textColor="#fff" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#60c4db"
        android:visibility="gone"
        android:id="@+id/layout_top_grammar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintEnd_toStartOf="@id/tv_form"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Name"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tv_form"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Form"
            android:textColor="#fff" />
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_list_voca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />
</LinearLayout>