<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/navigation_header_layout"/>
    <nauq.mal.com.formapp.views.CustomFontEditText
        android:id="@+id/et_ques"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="top"
        android:padding="3dp"
        android:inputType="text|textMultiLine"
        android:hint="@string/txt_et_question"
        android:background="@drawable/bg_et_add_ques"
        android:layout_marginTop="@dimen/card_corner_10"
        android:layout_height="100dp" />
    <nauq.mal.com.formapp.views.CustomFontButton
        android:id="@+id/btn_attach_img"
        android:padding="5dp"
        android:background="@drawable/bg_button"
        android:layout_width="100dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/card_corner_10"
        android:layout_marginEnd="@dimen/card_corner_10"
        android:text="@string/txt_attach_image"/>
    <nauq.mal.com.formapp.views.CustomFontButton
        android:id="@+id/btn_send_ques"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:background="@drawable/bg_button"
        android:padding="@dimen/card_corner_10"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/card_corner_10"
        android:layout_marginStart="@dimen/card_corner_10"
        android:layout_marginEnd="@dimen/card_corner_10"
        android:text="@string/txt_send_ques"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rc_img"
        android:layout_margin="@dimen/card_corner_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>