<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_loginn"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:contentDescription="@null"
        android:src="@drawable/logo_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/height_avatar_50"
        android:layout_marginRight="@dimen/height_avatar_50"
        android:layout_marginTop="@dimen/card_corner_10"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_user_name"
            android:gravity="center_vertical"
            android:hint="@string/txt_username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/text_small_14"
            app:met_baseColor="@color/text_color"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="#0BB2CA"
            app:met_primaryColor="#0BB2CA"
            app:met_textColorHint="@color/hint_color"
            app:met_underlineColor="#0BB2CA" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_password"
            android:gravity="center_vertical"
            android:hint="@string/txt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/text_small_14"
            app:met_baseColor="@color/text_color"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="#0BB2CA"
            app:met_primaryColor="#0BB2CA"
            app:met_textColorHint="@color/hint_color"
            app:met_underlineColor="#0BB2CA" />


        <nauq.mal.com.formapp.views.CustomFontButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_top_btn_login"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/txt_login"
            android:textColor="#fff"
            android:textSize="@dimen/text_small_14"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <nauq.mal.com.formapp.views.CustomFontTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="No Login ->"
                android:textColor="@color/sl_text_forgot_password"
                android:textSize="@dimen/text_small_13" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <nauq.mal.com.formapp.views.CustomFontTextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/txt_sign_up"
                android:textColor="@color/sl_text_forgot_password"
                android:textSize="@dimen/text_small_13" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="@dimen/card_corner_10"
        android:gravity="center"
        android:text="@string/txt_copy_right"
        android:textColor="#2096B5"
        android:textSize="@dimen/text_small_13" />
</LinearLayout>