<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPost"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_tab"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="Posts"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />
        <View
            android:layout_width="15dp"
            android:layout_height="1dp" />


        <Button
            android:id="@+id/btnWord"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_tab"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="Words"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="15sp" />

    </LinearLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_corner_10"
        android:id="@+id/layout_top_voca"
        android:background="#60c4db"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/txt_word"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tvMeaning"
            app:layout_constraintStart_toEndOf="@id/tvWords"
            app:layout_constraintEnd_toStartOf="@id/tvBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/txt_meaning"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tvBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="5dp"
            android:text="@string/txt_bookmark"
            android:textColor="#fff" />
    </android.support.constraint.ConstraintLayout>
    <FrameLayout
        android:id="@+id/frame_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />
</LinearLayout>