<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="#00ffffff"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_corner_10"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:drawablePadding="10dp"
                android:paddingEnd="7dp"
                android:paddingStart="7dp"
                android:text="@string/txt_question_demo"
                android:textColor="#000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_question"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/card_corner_10"
                android:contentDescription="@null"
                android:src="@drawable/img_question_demo"
                android:visibility="visible" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view_ques"
        android:layout_marginBottom="@dimen/card_corner_10"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:cardCornerRadius="5dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_ans_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/txt_explain_ans"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAnswerDescrition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black" />

    </LinearLayout>

</RelativeLayout>